<resources>
    <string name="app_name">瘫瘫</string>

    <string name="menu_left_item1">仿探</string>
    <string name="menu_left_item2">消息</string>
    <string name="menu_left_item3">匿名暗恋表白</string>
    <string name="menu_left_item4">设置</string>
    <string name="menu_left_item5">新手引导</string>
    <string name="menu_left_item6">推荐给好友</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
