<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingBottom="10dp"
    android:layout_gravity="bottom"
    android:gravity="bottom"
    tools:background="@color/color5">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="40dp"
        android:scrollbars="none">
        <LinearLayout
            android:id="@+id/menu_left_grop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/menu_left_item1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/slidingmenu_left_height"
                android:drawableLeft="@mipmap/menu_left_item1"
                android:drawablePadding="@dimen/slidingmenu_left_padding"
                android:gravity="center_vertical"
                android:clickable="true"
                android:textColor="@drawable/seletor_tv_item"
                android:textSize="@dimen/slidingmenu_left_text"
                android:text="@string/menu_left_item1"/>
            <TextView
                android:id="@+id/menu_left_item2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/slidingmenu_left_height"
                android:drawableLeft="@mipmap/menu_left_item2"
                android:drawablePadding="@dimen/slidingmenu_left_padding"
                android:gravity="center_vertical"
                android:textColor="@drawable/seletor_tv_item"
                android:textSize="@dimen/slidingmenu_left_text"
                android:text="@string/menu_left_item2"/>
            <TextView
                android:id="@+id/menu_left_item3"
                android:layout_width="match_parent"
                android:layout_height="@dimen/slidingmenu_left_height"
                android:drawablePadding="@dimen/slidingmenu_left_padding"
                android:drawableLeft="@mipmap/menu_left_item3"
                android:gravity="center_vertical"
                android:textColor="@drawable/seletor_tv_item"
                android:textSize="@dimen/slidingmenu_left_text"
                android:text="@string/menu_left_item3"/>
            <TextView
                android:id="@+id/menu_left_item4"
                android:layout_width="match_parent"
                android:layout_height="@dimen/slidingmenu_left_height"
                android:drawablePadding="@dimen/slidingmenu_left_padding"
                android:textSize="@dimen/slidingmenu_left_text"
                android:drawableLeft="@mipmap/menu_left_item4"
                android:gravity="center_vertical"
                android:textColor="@drawable/seletor_tv_item"
                android:text="@string/menu_left_item4"/>
            <TextView
                android:id="@+id/menu_left_item5"
                android:layout_width="match_parent"
                android:layout_height="@dimen/slidingmenu_left_height"
                android:drawablePadding="@dimen/slidingmenu_left_padding"
                android:drawableLeft="@mipmap/menu_left_item5"
                android:gravity="center_vertical"
                android:textColor="@drawable/seletor_tv_item"
                android:textSize="@dimen/slidingmenu_left_text"
                android:text="@string/menu_left_item5"/>
            <TextView
                android:id="@+id/menu_left_item6"
                android:layout_width="match_parent"
                android:layout_height="@dimen/slidingmenu_left_height"
                android:drawablePadding="@dimen/slidingmenu_left_padding"
                android:drawableLeft="@mipmap/menu_left_item6"
                android:gravity="center_vertical"
                android:textColor="@drawable/seletor_tv_item"
                android:textSize="@dimen/slidingmenu_left_text"
                android:text="@string/menu_left_item6"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>